# nlavida

./: .gitignore  .python-version  LICENSE  README.md  environment.yaml  pyproject.toml  temp.txt  tox.ini
backend/: app.py  download_process_prompt.py  main.py
backend/prompt/: core_prompt.pkl  system_prompt.txt
backend/tools/: python_repl_plot_tool.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
prompt/: system_prompt.txt
src/: .envExample  app.py  download_process_prompt.py  main.py
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/templates/: index.html
src/tools/: cleanup.py  get_full_prompt.py  python_repl_plot_tool.py
tests/: test_app.py
